--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "portfolio_yash",
+  homepage:"https://Yash-Shrivastav730.github.io/yash_portfolio/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
